--- a/RexBot/Config/RexBot.conf
+++ b/RexBot/Config/RexBot.conf
@@ -1,6 +1,6 @@
 ﻿{
 "Key" : "API KEY GOES HERE",
-"AllowedCategories" : ["themed", "say","pasta","testing","silly"],
+"AllowedCategories" : ["themed", "say","testing","silly"],
 "DisallowedCategories" : [],
 "AllowHardcoded" : true,
 "ControlChannel" : "bot-control",
