--- a/RexBot/Config/RexBot.conf
+++ b/RexBot/Config/RexBot.conf
@@ -1,5 +1,5 @@
 ﻿{
-"Key" : "API KEY GOES HERE",
+"Token" : "API KEY GOES HERE",
 "AllowedCategories" : ["themed", "say","testing","silly"],
 "DisallowedCategories" : [],
 "AllowHardcoded" : true,
