--- a/RexBot/RexBot.csproj
+++ b/RexBot/RexBot.csproj
@@ -16,7 +16,7 @@
     <None Update="Config\Commands\botsay.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Config\Commands\camera.png">
+    <None Update="Config\Files\camera.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Config\Commands\glomp.json">
@@ -41,6 +41,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Config\Commands\usersay.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Config\Files\camera1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Config\RexBot.conf">
